force-app/main/default/objects/SCOC__CollectionList__c/SCOC__CollectionList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Collection List</description>
    <label>Collection</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>