force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AccountNumber__c</fullName>
    <description>Account number</description>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>