force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__AccountRating__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AccountRating__c</fullName>
    <description>Manner of Payment code that reflects the condition of the account as of the Effective Date.</description>
    <label>Account Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>