force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__DateEffective__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateEffective__c</fullName>
    <description>The date the account was last verified or updated.</description>
    <label>Date Effective</label>
    <type>Date</type>
</CustomField>