force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__DateOpened__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateOpened__c</fullName>
    <description>The date the account was placed with the collector.</description>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>