force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__DatePaidOut__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DatePaidOut__c</fullName>
    <description>The date the account was paid out.</description>
    <label>Date Paid Out</label>
    <type>Date</type>
</CustomField>