force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__Designator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Designator__c</fullName>
    <description>Identifies the contractual ownership of the account</description>
    <label>Designator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>