force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__MostRecentPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MostRecentPaymentDate__c</fullName>
    <description>The date of the most recent monthly payment.</description>
    <label>Most Recent Payment Date</label>
    <type>Date</type>
</CustomField>