force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__OriginalCreditGrantorBalance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OriginalCreditGrantorBalance__c</fullName>
    <description>Original balance in collection.</description>
    <label>Original Credit Grantor Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>