force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__PastDue__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PastDue__c</fullName>
    <description>Dollar amount past due</description>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>