force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__PortfolioType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PortfolioType__c</fullName>
    <description>Type of portfolio.</description>
    <label>Portfolio Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>