force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__RemarkCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RemarkCode__c</fullName>
    <description>Remark code that returns more information about the account.</description>
    <label>Remark Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>