force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__RemarkType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RemarkType__c</fullName>
    <description>Specifies the type of remark code.</description>
    <label>Remark Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>