force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__ResponseEntity__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ResponseEntity__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Response Entity.</description>
    <label>Response Entity</label>
    <referenceTo>SCOC__ResponseEntity__c</referenceTo>
    <relationshipLabel>Response Entity Collections</relationshipLabel>
    <relationshipName>CollectionList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>