force-app/main/default/objects/SCOC__CollectionList__c/fields/SCOC__UpdateMethod__c.field-meta.xml
<CustomField>
    <fullName>SCOC__UpdateMethod__c</fullName>
    <description>Update method.</description>
    <label>Update Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>